[project]
name = "learn-gil-and-async"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "piyota0901", email = "piyo.tatsu.0901@gmail.com" }
]
dependencies = [
    "httpx>=0.28.1",
    "aiofiles>=24.1.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/"]
